# Chess

./: CMakeLists.txt  README.md
src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  Game.cpp  Game.h  Types.h  UIManager.cpp  UIManager.h  Utilities.h  main.cpp
src/ChessEngine/: AIPlayer.cpp  AIPlayer.h  PieceSquareTables.cpp  PieceSquareTables.h
src/ResourceManager/: ResourceManager.cpp  ResourceManager.h
src/pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
